--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
 
     <div class="top">
-        <img class="cloud1" src="/Web-dev/cloud.png" alt="cloud-image1">
+        <img class="cloud1" src="cloud.png" alt="cloud-image1">
         <h1>Hello! </h1>
         <h2> Welcome to the Home page </h2>
-        <img class="cloud2" src="/Web-dev/cloud.png" alt="cloud-image2">
-        <img src="/Web-dev/mountain.png" alt="mountain-image">
+        <img class="cloud2" src="cloud.png" alt="cloud-image2">
+        <img src="mountain.png" alt="mountain-image">
     </div>
 
 
