--- a/galary.html
+++ b/galary.html
@@ -13,10 +13,10 @@
 
     <h1>Galary</h1>
 
-    <img class="gpic1" src="pheonex.jpeg" alt=""><br><br>
-    <img class="gpic2" src="yoru.jpeg" alt=""><br><br>
-    <img class="gpic3" src="reyna.jpeg" alt=""><br><br>
-    <img class="gpic4" src="sage.jpeg" alt=""><br><br>
+    <img class="gpic1" src="pheonex.jpeg" alt="">
+    <img class="gpic2" src="yoru.jpeg" alt=""><br>
+    <img class="gpic3" src="reyna.jpeg" alt="">
+    <img class="gpic4" src="sage.jpeg" alt="">
 
 </body>
 </html>
